<resources>
    <string name="app_name">Aplikasi Stori</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="title_welcome">Halo Yazid!</string>
    <string name="nama_user">Nama User</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="description">Deskripsi</string>
    <string name="upload">Kirim</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="settings">Pengaturan</string>
    <string name="change_language">Ganti Bahasa</string>
    <string name="dark_mode">Mode Gelap</string>
    <string name="detail_story">Detail Cerita</string>
    <string name="add_story">Tambahkan Cerita</string>
    <string name="yeah">Yeah!</string>
    <string name="berhasil_login">Anda berhasil login. Sudah tidak sabar untuk belajar ya?</string>
    <string name="gagal_login">Gagal Login</string>
    <string name="gagal_memuat_data">Gagal memuat data. Periksa koneksi internet Anda atau coba lagi nanti.</string>
    <string name="username_password_salah">Username atau Password Anda Salah</string>
    <string name="oke">Oke</string>
    <string name="gagal_memuat">Gagal Mendapatkan Data</string>
    <string name="pendaftaran_gagal">Pendaftaran Gagal</string>
    <string name="periksa_kembali_data">Periksa kembali Data Anda</string>
    <string name="masukkan_email_anda">Masukkan Email Anda</string>
    <string name="format_email_salah">Format Email Tidak Valid</string>
    <string name="masukkan_nama_anda">Masukkan Nama Anda</string>
    <string name="masukkan_password_anda">Masukkan Password Anda</string>
    <string name="password_kurang_dari_8">Password tidak boleh kurang dari 8 karakter</string>
    <string name="date">Tanggal</string>
    <string name="title_activity_maps">Aktivitas Peta</string>
    <string name="maps">Peta</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satelit</string>
    <string name="terrain_type">Lingkungan</string>
    <string name="hybrid_type">Hibrida</string>
    <string name="use_location">Lokasi</string>
</resources>